...
            "state": "translated",
            "value": "Hiệu quả từng bài"
          }
        }
      }
    },
    "글쓰기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Write"
          }
...
            "state": "translated",
            "value": "Hiện bài đăng lại"
          }
        }
      }
    },
    "리포스트 숨기기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Hide reposts"
          }
...
            "state": "translated",
            "value": "Không tải được bình luận — thử lại"
          }
        }
      }
    },
    "더 보기": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Show more"
          }
...
            "state": "translated",
            "value": "Không thể xóa"
          }
        }
      }
    },
    "새 글": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New Post"
          }
...
            "state": "translated",
            "value": "Đã hiểu, đăng"
          }
        }
      }
    },
    "알림": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Notifications"
          }
...
            "state": "translated",
            "value": "Xóa tất cả tìm kiếm gần đây?"
          }
        }
      }
    },
    "최신": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Latest"
          }
...
